@@ -2,7 +2,7 @@ package no.nav.registre.testnorge.arbeidsforholdservice.consumer;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
-import no.nav.registre.testnorge.arbeidsforholdservice.config.credentials.AaregServiceProperties;
+import no.nav.registre.testnorge.arbeidsforholdservice.config.Consumers;
 import no.nav.registre.testnorge.arbeidsforholdservice.consumer.command.GetArbeidstakerArbeidsforholdCommand;
 import no.nav.registre.testnorge.arbeidsforholdservice.consumer.dto.ArbeidsforholdDTO;
 import no.nav.testnav.libs.securitycore.domain.ServerProperties;
@@ -18,7 +18,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -31,21 +30,23 @@ public class AaregConsumer {
     private final TokenExchange tokenExchange;
 
     public AaregConsumer(
-            AaregServiceProperties serverProperties,
+            Consumers consumers,
             TokenExchange tokenExchange,
             ObjectMapper objectMapper) {
-
-        this.serverProperties = serverProperties;
+        serverProperties = consumers.getTestnavAaregProxy();
         this.tokenExchange = tokenExchange;
-
-        ExchangeStrategies jacksonStrategy = ExchangeStrategies.builder()
-                .codecs(config -> {
-                    config.defaultCodecs()
-                            .jackson2JsonEncoder(new Jackson2JsonEncoder(objectMapper, MediaType.APPLICATION_JSON));
-                    config.defaultCodecs()
-                            .jackson2JsonDecoder(new Jackson2JsonDecoder(objectMapper, MediaType.APPLICATION_JSON));
-                }).build();
-
+        ExchangeStrategies jacksonStrategy = ExchangeStrategies
+                .builder()
+                .codecs(
+                        config -> {
+                            config
+                                    .defaultCodecs()
+                                    .jackson2JsonEncoder(new Jackson2JsonEncoder(objectMapper, MediaType.APPLICATION_JSON));
+                            config
+                                    .defaultCodecs()
+                                    .jackson2JsonDecoder(new Jackson2JsonDecoder(objectMapper, MediaType.APPLICATION_JSON));
+                        })
+                .build();
         this.webClient = WebClient
                 .builder()
                 .exchangeStrategies(jacksonStrategy)
@@ -66,7 +67,7 @@ public class AaregConsumer {
                 .stream()
                 .filter(Objects::nonNull)
                 .filter(value -> value.getArbeidsgiver().getOrganisasjonsnummer().equals(orgnummer))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<ArbeidsforholdDTO> getArbeidsforhold(String ident, String orgnummer, String arbeidsforholdId, String miljo) {
