@@ -14,7 +14,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @Slf4j
@@ -35,6 +34,7 @@ public class ArbeidstakerController {
             return ResponseEntity.notFound().build();
         }
 
-        return ResponseEntity.ok(arbeidsforhold.stream().map(Arbeidsforhold::toV2DTO).collect(Collectors.toList()));
+        return ResponseEntity.ok(arbeidsforhold.stream().map(Arbeidsforhold::toV2DTO)
+                .toList());
     }
 }
