@@ -7,11 +7,12 @@ import lombok.Data;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import no.nav.dolly.domain.resultset.dokarkiv.Fagsaksystem;
 import no.nav.dolly.domain.resultset.dokarkiv.RsDokarkiv;
+import no.nav.dolly.domain.resultset.dokarkiv.Sakstype;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 
@@ -81,7 +82,9 @@ public class DokarkivRequest {
             return String.format("Dokument{tittel='%s', brevkode='%s', dokumentvariantListe=%s}",
                     tittel,
                     brevkode,
-                    dokumentvarianter.stream().map(DokumentVariant::toString).collect(Collectors.toList()));
+                    dokumentvarianter.stream()
+                            .map(DokumentVariant::toString)
+                            .toList());
         }
     }
 
@@ -126,8 +129,7 @@ public class DokarkivRequest {
     public static class Sak {
 
         private String fagsakId;
-        private String fagsaksystem;
-        private String sakstype;
+        private Fagsaksystem fagsaksystem;
+        private Sakstype sakstype;
     }
-
 }
