@@ -3,20 +3,24 @@ package no.nav.dolly.bestilling.tpsmessagingservice;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.tomakehurst.wiremock.client.WireMock;
-import no.nav.dolly.config.credentials.TpsMessagingServiceProperties;
-import no.nav.testnav.libs.dto.kontoregisterservice.v1.BankkontonrUtlandDTO;
+import no.nav.dolly.elastic.BestillingElasticRepository;
+import no.nav.testnav.libs.data.kontoregister.v1.BankkontonrUtlandDTO;
 import no.nav.testnav.libs.securitycore.domain.AccessToken;
+import no.nav.testnav.libs.securitycore.domain.ServerProperties;
 import no.nav.testnav.libs.standalone.servletsecurity.exchange.TokenExchange;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
+import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+import reactor.core.publisher.Mono;
 
 import java.security.SecureRandom;
 import java.util.List;
@@ -50,11 +54,22 @@ class TpsMessagingConsumerTest {
     @MockBean
     private AccessToken accessToken;
 
+    @MockBean
+    private BestillingElasticRepository bestillingElasticRepository;
+
+    @MockBean
+    private ElasticsearchOperations elasticsearchOperations;
+
     @Autowired
     private TpsMessagingConsumer tpsMessagingConsumer;
 
     private ObjectMapper objectMapper = new ObjectMapper();
     private Random randomKontonummer = new SecureRandom();
+
+    @BeforeEach
+    void setup() {
+        when(tokenService.exchange(any(ServerProperties.class))).thenReturn(Mono.just(accessToken));
+    }
 
     private void stubPostUtenlandskBankkontoData() {
 
@@ -72,7 +87,7 @@ class TpsMessagingConsumerTest {
         var response = tpsMessagingConsumer.sendUtenlandskBankkontoRequest(
                         IDENT,
                         MILJOER,
-                        new BankkontonrUtlandDTO(), accessToken)
+                        new BankkontonrUtlandDTO())
                 .collectList()
                 .block();
 
@@ -82,20 +97,19 @@ class TpsMessagingConsumerTest {
     @Test
     void createDigitalKontaktdata_GenerateTokenFailed_ThrowsDollyFunctionalException() {
 
-        when(tokenService.exchange(any(TpsMessagingServiceProperties.class))).thenThrow(new SecurityException());
+        when(tokenService.exchange(any(ServerProperties.class))).thenThrow(new SecurityException());
 
         BankkontonrUtlandDTO bankkontonrUtlandDTO = new BankkontonrUtlandDTO();
 
         Assertions.assertThrows(SecurityException.class, () ->
-                tpsMessagingConsumer.getToken()
-                        .flatMapMany(token -> tpsMessagingConsumer.sendUtenlandskBankkontoRequest(
+                tpsMessagingConsumer.sendUtenlandskBankkontoRequest(
                                 IDENT,
                                 MILJOER,
-                                bankkontonrUtlandDTO, token))
+                                bankkontonrUtlandDTO)
                         .collectList()
                         .block());
 
-        verify(tokenService).exchange(any(TpsMessagingServiceProperties.class));
+        verify(tokenService).exchange(any(ServerProperties.class));
     }
 
     @Test
@@ -112,7 +126,7 @@ class TpsMessagingConsumerTest {
                         p -> tpsMessagingConsumer.sendUtenlandskBankkontoRequest(p, MILJOER,
                                         BankkontonrUtlandDTO.builder()
                                                 .kontonummer(Integer.toString(randomKontonummer.nextInt()))
-                                                .build(), accessToken)
+                                                .build())
                                 .collectList()
                                 .block()
                 );
@@ -127,7 +141,7 @@ class TpsMessagingConsumerTest {
                         throw new RuntimeException(e);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         var forskjelligeBankkontoer = sendtBankkontoer.stream().distinct().collect(Collectors.toList());
 
