@@ -3,7 +3,7 @@ package no.nav.registre.testnorge.mn.syntarbeidsforholdservice.consumer;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.config.credentials.OppsummeringsdokuemntServerProperties;
+import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.config.Consumers;
 import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.domain.Opplysningspliktig;
 import no.nav.registre.testnorge.mn.syntarbeidsforholdservice.domain.Organisajon;
 import no.nav.testnav.libs.commands.GetOppsummeringsdokumentCommand;
@@ -35,25 +35,26 @@ public class OppsummeringsdokumentConsumer {
     private static final int BYTE_COUNT = 16 * 1024 * 1024;
     private final WebClient webClient;
     private final TokenExchange tokenExchange;
-    private final ServerProperties properties;
+    private final ServerProperties serverProperties;
     private final Executor executor;
     private final ApplicationProperties applicationProperties;
 
     public OppsummeringsdokumentConsumer(
             TokenExchange tokenExchange,
-            OppsummeringsdokuemntServerProperties properties,
+            Consumers consumers,
             ObjectMapper objectMapper,
             ApplicationProperties applicationProperties) {
-
         this.applicationProperties = applicationProperties;
         this.executor = Executors.newFixedThreadPool(10);
         this.tokenExchange = tokenExchange;
-        this.properties = properties;
+        serverProperties = consumers.getOppsummeringsdokumentService();
         this.webClient = WebClient
                 .builder()
-                .baseUrl(properties.getUrl())
+                .baseUrl(serverProperties.getUrl())
                 .codecs(clientDefaultCodecsConfigurer -> {
-                    clientDefaultCodecsConfigurer.defaultCodecs().maxInMemorySize(BYTE_COUNT);
+                    clientDefaultCodecsConfigurer
+                            .defaultCodecs()
+                            .maxInMemorySize(BYTE_COUNT);
                     clientDefaultCodecsConfigurer
                             .defaultCodecs()
                             .jackson2JsonEncoder(new Jackson2JsonEncoder(objectMapper, MediaType.APPLICATION_JSON));
@@ -64,23 +65,8 @@ public class OppsummeringsdokumentConsumer {
                 .build();
     }
 
-    private CompletableFuture<String> saveOpplysningspliktig(Opplysningspliktig opplysningspliktig, String miljo) {
-        AccessToken accessToken = tokenExchange.exchange(properties).block();
-        return CompletableFuture.supplyAsync(
-                () -> new SaveOppsummeringsdokumenterCommand(
-                        webClient,
-                        accessToken.getTokenValue(),
-                        opplysningspliktig.toDTO(),
-                        miljo,
-                        applicationProperties.getName(),
-                        Populasjon.MINI_NORGE
-                ).call().block(),
-                executor
-        );
-    }
-
     public Optional<Opplysningspliktig> getOpplysningspliktig(Organisajon organisajon, LocalDate kalendermaaned, String miljo) {
-        AccessToken accessToken = tokenExchange.exchange(properties).block();
+        AccessToken accessToken = tokenExchange.exchange(serverProperties).block();
         var dto = new GetOppsummeringsdokumentCommand(webClient, accessToken.getTokenValue(), organisajon.getOrgnummer(), kalendermaaned, miljo).call().block();
         if (dto == null) {
             return Optional.empty();
@@ -91,7 +77,7 @@ public class OppsummeringsdokumentConsumer {
 
     public List<Opplysningspliktig> getAlleOpplysningspliktig(String miljo) {
         log.info("Henter alle opplysningspliktige fra {}...", miljo);
-        AccessToken accessToken = tokenExchange.exchange(properties).block();
+        AccessToken accessToken = tokenExchange.exchange(serverProperties).block();
         var list = new GetOppsummeringsdokumenterCommand(webClient, accessToken.getTokenValue(), miljo).call();
         log.info("Fant {} opplysningspliktig fra {}.", list.size(), miljo);
         return list.stream().map(value -> new Opplysningspliktig(value, new ArrayList<>())).collect(Collectors.toList());
@@ -104,10 +90,26 @@ public class OppsummeringsdokumentConsumer {
 
     @SneakyThrows
     public void sendOpplysningspliktig(List<Opplysningspliktig> opplysningspliktig, String miljo) {
-        var futures = opplysningspliktig.stream().map(value -> saveOpplysningspliktig(value, miljo)).collect(Collectors.toList());
+        var futures = opplysningspliktig.stream().map(value -> saveOpplysningspliktig(value, miljo))
+                .toList();
         for (var future : futures) {
             future.get();
         }
+    }
+
+    private CompletableFuture<String> saveOpplysningspliktig(Opplysningspliktig opplysningspliktig, String miljo) {
+        AccessToken accessToken = tokenExchange.exchange(serverProperties).block();
+        return CompletableFuture.supplyAsync(
+                () -> new SaveOppsummeringsdokumenterCommand(
+                        webClient,
+                        accessToken.getTokenValue(),
+                        opplysningspliktig.toDTO(),
+                        miljo,
+                        applicationProperties.getName(),
+                        Populasjon.MINI_NORGE
+                ).call().block(),
+                executor
+        );
     }
 
 }
